Simplify cityinfo fetching
